; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/mb/extr_mbutils.c_pg_mbstrlen.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/mb/extr_mbutils.c_pg_mbstrlen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pg_mbstrlen(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 0, i32* %4, align 4
  %5 = call i32 (...) @pg_database_encoding_max_length()
  %6 = icmp eq i32 %5, 1
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load i8*, i8** %3, align 8
  %9 = call i32 @strlen(i8* %8)
  store i32 %9, i32* %2, align 4
  br label %25

10:                                               ; preds = %1
  br label %11

11:                                               ; preds = %15, %10
  %12 = load i8*, i8** %3, align 8
  %13 = load i8, i8* %12, align 1
  %14 = icmp ne i8 %13, 0
  br i1 %14, label %15, label %23

15:                                               ; preds = %11
  %16 = load i8*, i8** %3, align 8
  %17 = call i32 @pg_mblen(i8* %16)
  %18 = load i8*, i8** %3, align 8
  %19 = sext i32 %17 to i64
  %20 = getelementptr inbounds i8, i8* %18, i64 %19
  store i8* %20, i8** %3, align 8
  %21 = load i32, i32* %4, align 4
  %22 = add nsw i32 %21, 1
  store i32 %22, i32* %4, align 4
  br label %11

23:                                               ; preds = %11
  %24 = load i32, i32* %4, align 4
  store i32 %24, i32* %2, align 4
  br label %25

25:                                               ; preds = %23, %7
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}

declare dso_local i32 @pg_database_encoding_max_length(...) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @pg_mblen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
